--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
+  profiles:
+#    include: real-oauth
+    include: oauth  # application-oauth.properties
   datasource:
     url: jdbc:h2:tcp://localhost/~/gw-rehab-webservice
     username: sa
