--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
-#  h2:
-#    console:
-#      enabled: true
+  h2:
+    console:
+      enabled: true
   session:
     store-type: jdbc
     jdbc:
