--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,14 +1,4 @@
 spring:
-  jpa:
-    properties:
-      hibernate:
-#        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-    show-sql: true
-  h2:
-    console:
-      enabled: true
-  session:
-    store-type: jdbc
   # Test OAuth
   security:
     oauth2:
@@ -18,44 +8,26 @@ spring:
             client-id: test
             client-secret: test
             scope: profile,email
-####################################################################################
-#spring:
-#  # Test OAuth
-#  security:
-#    oauth2:
-#      client:
-#        registration:
-#          google:
-#            client-id: test
-#            client-secret: test
-#            scope: profile,email
-#  h2:
-#    console:
-#      enabled: true
-#  session:
-#    store-type: jdbc
-#    jdbc:
-#      initialize-schema: always
-#      schema: classpath:org/springframework/session/jdbc/schema-h2.sql # Path to the SQL file to use to initialize the database schema.
-#      table-name: SPRING_SESSION # Name of the database table used to store sessions.
-#  profiles:
-##    include: real-oauth
-#    include: oauth  # application-oauth.properties
-#  datasource:
-#    url: jdbc:h2:tcp://localhost/~/gw-rehab-webservice
-#    username: sa
-#    password:
-#    driver-class-name: org.h2.Driver
-#
-#  jpa:
-#    hibernate:
-#      ddl-auto: create
-#    properties:
-#      hibernate:
-##        show_sql: true
-#        format_sql: true
-#        use_sql_comments: true
-#
-#logging.level:
-#  org.hibernate.SQL: debug
-##  org.hibernate.type: trace
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+#        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+#        show_sql: true
+        format_sql: true
+        use_sql_comments: true
+
+  h2:
+    console:
+      enabled: true
+  session:
+    store-type: jdbc
+    jdbc:
+      initialize-schema: always
+      schema: classpath:org/springframework/session/jdbc/schema-h2.sql # Path to the SQL file to use to initialize the database schema.
+      table-name: SPRING_SESSION # Name of the database table used to store sessions.
+
+logging.level:
+  org.hibernate.SQL: debug
+#  org.hibernate.type: trace
