--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,11 +11,11 @@ spring:
   profiles:
 #    include: real-oauth
     include: oauth  # application-oauth.properties
-  datasource:
-    url: jdbc:h2:tcp://localhost/~/gw-rehab-webservice
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+#  datasource:
+#    url: jdbc:h2:tcp://localhost/~/gw-rehab-webservice
+#    username: sa
+#    password:
+#    driver-class-name: org.h2.Driver
 
   jpa:
     hibernate:
