--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,43 +1,49 @@
 spring:
   profiles:
-    active: local
-#    include: real-oauth
-    include: oauth  # application-oauth.properties
+    group:
+      local: oauth, local
+      real:
 
-  h2:
-    console:
-      enabled: true
-
-  session:
-    store-type: jdbc
-    jdbc:
-      initialize-schema: always
-#      schema: classpath:org/springframework/session/jdbc/schema-h2.sql # Path to the SQL file to use to initialize the database schema.
-      schema: classpath:org/springframework/session/jdbc/schema-mysql.sql # Path to the SQL file to use to initialize the database schema.
-      table-name: SPRING_SESSION # Name of the database table used to store sessions.
-
-  datasource:
-    driver-class-name: org.h2.Driver
-    hikari:
-      jdbc-url: jdbc:h2:tcp://localhost/~/gw-rehab-webservice;MODE=MYSQL
-      username: sa
-      password:
-
-  jpa:
-    hibernate:
-      ddl-auto: create
-    properties:
-      hibernate:
-#        dialect : org.hibernate.dialect.SQLServerDialect
-#        dialect: org.hibernate.dialect.Oracle10gDialect
-#        https://jojoldu.tistory.com/539
-#        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-        dialect: org.hibernate.dialect.MySQL57Dialect
-        storage_engine: innodb
-#        show_sql: true
-        format_sql: true
-        use_sql_comments: true
-
-logging.level:
-  org.hibernate.SQL: debug
-#  org.hibernate.type: trace
+#spring:
+#  profiles:
+#    active: local
+##    include: real-oauth
+#    include: oauth  # application-oauth.properties
+#
+#  h2:
+#    console:
+#      enabled: true
+#
+#  session:
+#    store-type: jdbc
+#    jdbc:
+#      initialize-schema: always
+##      schema: classpath:org/springframework/session/jdbc/schema-h2.sql # Path to the SQL file to use to initialize the database schema.
+#      schema: classpath:org/springframework/session/jdbc/schema-mysql.sql # Path to the SQL file to use to initialize the database schema.
+#      table-name: SPRING_SESSION # Name of the database table used to store sessions.
+#
+#  datasource:
+#    driver-class-name: org.h2.Driver
+#    hikari:
+#      jdbc-url: jdbc:h2:tcp://localhost/~/gw-rehab-webservice;MODE=MYSQL
+#      username: sa
+#      password:
+#
+#  jpa:
+#    hibernate:
+#      ddl-auto: create
+#    properties:
+#      hibernate:
+##        dialect : org.hibernate.dialect.SQLServerDialect
+##        dialect: org.hibernate.dialect.Oracle10gDialect
+##        https://jojoldu.tistory.com/539
+##        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+#        dialect: org.hibernate.dialect.MySQL57Dialect
+#        storage_engine: innodb
+##        show_sql: true
+#        format_sql: true
+#        use_sql_comments: true
+#
+#logging.level:
+#  org.hibernate.SQL: debug
+##  org.hibernate.type: trace
