배포 자동화 테스트를 위해 코드 임의 수정

--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,8 @@ jar {
 }
 
 group = 'gw'
-version = '0.0.1-SNAPSHOT'
+//version = '0.0.1-SNAPSHOT'
+version = '1.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
 configurations {
