jar파일명 겹치지 않게 설정 (파일명+시간 추가)

--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,9 @@ jar {
 
 group = 'gw'
 //version = '0.0.1-SNAPSHOT'
-version = '1.0.1-SNAPSHOT'
+//version = '1.0.1-SNAPSHOT'
+version '1.0.1-SNAPSHOT-'+new Date().format("yyyyMMddHHmmss")
+
 sourceCompatibility = '11'
 
 configurations {
